컴포넌트 - 데이터 바인딩 1 완료

--- a/src/app/section/buttons/buttons.component.html
+++ b/src/app/section/buttons/buttons.component.html
@@ -1,1 +1,6 @@
-<button>button</button>
+<p>
+  <span>{{ count }}</span>
+  <button class="start-btn" (click)="start($event)">시작</button>
+  <button class="stop-btn">button</button>
+  <button class="reset-btn">button</button>
+</p>
