--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,5 +1,7 @@
 <div class="title">
-  <p>section works!</p>
-  <app-time-display></app-time-display>
-  <app-buttons></app-buttons>
+  <div class="display">
+    <p>section works!</p>
+    <app-time-display></app-time-display>
+    <app-buttons></app-buttons>
+  </div>
 </div>
