컴포넌트 - 데이터 바인딩 2 완료

--- a/src/app/section/buttons/buttons.component.html
+++ b/src/app/section/buttons/buttons.component.html
@@ -1,6 +1,6 @@
 <p>
   <span>{{ count }}</span>
-  <button class="start-btn" (click)="start($event)">시작</button>
+  <button class="start-btn" (click)="start()">시작</button>
   <button class="stop-btn">button</button>
   <button class="reset-btn">button</button>
 </p>
