--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,7 +1,7 @@
 <div class="title">
   <div class="display">
     <p>section works!</p>
-    <app-time-display></app-time-display>
-    <app-buttons></app-buttons>
+    <app-time-display [inputData]="present"></app-time-display>
+    <app-buttons (clickEvent)="startTime($event)"></app-buttons>
   </div>
 </div>
