--- a/src/app/section/time-display/time-display.component.html
+++ b/src/app/section/time-display/time-display.component.html
@@ -1,1 +1,6 @@
-<p>{{test}}</p>
+<div>
+  <div class="time-text">
+    <span>{{ min }} : {{ sec }} : </span>
+    <small>{{ ms }}</small>
+  </div>
+</div>
